--- a/luffa/Cargo.toml
+++ b/luffa/Cargo.toml
@@ -19,6 +19,7 @@ futures.workspace = true
 git-version.workspace = true
 indicatif.workspace = true
 libp2p.workspace = true
+libipld.workspace = true
 luffa-process.workspace = true
 luffa-metrics.workspace = true
 luffa-rpc-client.workspace = true
@@ -31,4 +32,4 @@ tracing.workspace = true
 which.workspace = true
 thiserror.workspace = true
 multihash.workspace = true
-libipld.workspace = true
+multibase.workspace = true
