--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "luffa-node",
   "luffa-relay",
   "luffa-process",
+  "luffa-sdk",
   "luffa",
 ]
 resolver = "2"
@@ -20,6 +21,7 @@ edition = "2021"
 
 [workspace.dependencies]
 ahash = "0.8"
+aes-gcm = "0.10.1"
 anyhow = { version = "1", features = ["backtrace"] }
 async-trait = "0.1.57"
 async-stream = "0.3.3"
@@ -28,6 +30,8 @@ async-channel = "1.7.1"
 asynchronous-codec = "0.6"
 base64 = "0.20.0"
 bincode = "1.3.3"
+bson = "2.5.0"
+
 bs58 = "0.4"
 bytecheck = "0.6.7"
 bytes = "1.1"
@@ -50,6 +54,7 @@ deadqueue = "0.2.3"
 derivative = "2.2"
 sysinfo = "0.27.2"
 
+crc64fast = "1.0.0"
 ctrlc = "3.2.2"
 crossterm = "0.25"
 serde = "1"
@@ -120,6 +125,7 @@ luffa-process = { version = "0.1.0", path = "./luffa-process" }
 unsigned-varint = "0.7.1"
 which = "4.3.0"
 zeroize = "1.4"
+
 
 
 [profile.optimized-release]
