--- a/luffa-relay/luffa.relay1.toml
+++ b/luffa-relay/luffa.relay1.toml
@@ -1,10 +1,9 @@
 [store]
 path = "/home/snqu/.local/share/luffa1/store"
 [p2p]
-# libp2p = {listening_multiaddrs = ["/ip4/0.0.0.0/udp/8877/quic-v1"],bootstrap_peers=["/ip4/206.238.220.40/udp/8899/quic-v1/p2p/12D3KooWDyjzAiWnZ11H8SGkL11WmB4UJxcmFQirMuyZPPqnyZAD"]}
 libp2p = {listening_multiaddrs = ["/ip4/0.0.0.0/udp/0/quic-v1","/ip4/0.0.0.0/tcp/0"],bootstrap_peers=["/ip4/127.0.0.1/udp/8899/quic-v1/p2p/12D3KooWMghNf6w6mhd1YiUjo28KGKKp9zi7H78A98ntq1dNdfpW"]}
 key_store_path = "/home/snqu/.local/share/luffa1"
-rpc_client = {p2p_addr = "irpc://0.0.0.0:40003",store_addr = "irpc://127.0.0.1:30003"}
+rpc_client = {p2p_addr = "irpc://127.0.0.1:30001"}
+
 [rpc_client]
-p2p_addr = "irpc://0.0.0.0:5001"
-store_addr = "irpc://127.0.0.1:6003"
+p2p_addr = "irpc://127.0.0.1:30001"
