--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,6 @@ async-channel = "1.7.1"
 asynchronous-codec = "0.6"
 base64 = "0.20.0"
 bincode = "1.3.3"
-bson = "2.5.0"
 
 bs58 = "0.4"
 bytecheck = "0.6.7"
@@ -76,7 +75,7 @@ lru = "0.8"
 
 reqwest = { version = "0.11.10", default-features = false}
 rlimit = "0.9.0"
-rocksdb = "0.19"
+
 
 tokio = "1"
 tokio-context = "0.1.3"
@@ -100,6 +99,8 @@ smallvec = "1.10"
 ssh-key = { version = "0.5.1", default-features = false }
 serde-error = "0.1.2"
 serde_with = "2.1"
+serde_cbor = "0.11.2"
+sled = "0.34.7"
 multibase = "0.9.1"
 multihash = "0.17"
 libipld = "0.15"
