--- a/luffa-metrics/Cargo.toml
+++ b/luffa-metrics/Cargo.toml
@@ -22,6 +22,9 @@ tracing.workspace = true
 tracing-opentelemetry.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 
+[target.'cfg(target_os = "android")'.dependencies]
+paranoid-android = "0.2.1"
+
 [dependencies.libp2p]
 workspace = true
 features = [
@@ -35,8 +38,6 @@ features = [
   "tcp",
   "dns",
   "mplex",
-  "request-response",
-  "websocket",
   "serde",
   "metrics",
   "relay",
