--- a/luffa-sdk/Cargo.toml
+++ b/luffa-sdk/Cargo.toml
@@ -22,7 +22,6 @@ futures.workspace = true
 lazy_static.workspace = true
 luffa-metrics.workspace = true
 luffa-node.workspace = true
-luffa-rpc-client.workspace = true
 luffa-rpc-types.workspace = true
 luffa-store = {workspace = true,features = [ "node"]}
 luffa-util.workspace = true
@@ -40,6 +39,8 @@ uniffi = { version = "0.23.0", features = ["cli"] }
 thiserror = "1.0"
 
 futures-lite = "1.12.0"
+tantivy = "0.19.2"
+
 
 
 [build-dependencies]
