--- a/luffa-sdk/luffa.client.toml
+++ b/luffa-sdk/luffa.client.toml
@@ -1,7 +1,3 @@
 [p2p]
-libp2p = { listening_multiaddrs = ["/ip4/0.0.0.0/udp/0/quic-v1"],bootstrap_peers=["/ip4/206.238.220.40/udp/8899/quic-v1/p2p/12D3KooWDyjzAiWnZ11H8SGkL11WmB4UJxcmFQirMuyZPPqnyZAD"]}
-key_store_path = "/home/snqu/.local/share/client1"
-rpc_client = {p2p_addr = "irpc://127.0.0.1:30001"}
-
-[rpc_client]
-p2p_addr = "irpc://127.0.0.1:30001"
+libp2p = { listening_multiaddrs = ["/ip4/0.0.0.0/udp/0/quic-v1"],bootstrap_peers=["/ip4/192.168.2.124/udp/8899/quic-v1/p2p/12D3KooWRxHCJhGZMpUvfVHGx2iK6NMtPSCtC3AVrvQ7B8rAnuYL"]}
+key_store_path = "~/.local/share/client1"
