--- a/luffa-metrics/Cargo.toml
+++ b/luffa-metrics/Cargo.toml
@@ -25,6 +25,9 @@ tracing-subscriber = { workspace = true, features = ["env-filter"] }
 [target.'cfg(target_os = "android")'.dependencies]
 paranoid-android = "0.2.1"
 
+[target.'cfg(target_os = "apple-ios")'.dependencies]
+tracing-oslog = "0.1.2"
+
 [dependencies.libp2p]
 workspace = true
 features = [
@@ -52,5 +55,3 @@ store = []
 bitswap = []
 p2p = ["libp2p"]
 
-# requires setting RUSTFLAGS="--cfg tokio_unstable"
-tokio-console = ["tokio/tracing", "console-subscriber"]
