--- a/luffa-rpc-types/Cargo.toml
+++ b/luffa-rpc-types/Cargo.toml
@@ -24,6 +24,7 @@ multihash.workspace = true
 serde-error.workspace = true
 serde_with.workspace = true
 serde_cbor.workspace = true
+tracing.workspace = true
 tokio = { workspace = true, default-features = false }
 uniffi = { version = "0.23.0", features = ["cli"] }
 
