--- a/luffa-node/Cargo.toml
+++ b/luffa-node/Cargo.toml
@@ -38,6 +38,7 @@ tokio-stream.workspace = true
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 zeroize.workspace = true
+void = "1.0.2"
 
 [dependencies.libp2p]
 workspace = true
