--- a/luffa-node/Cargo.toml
+++ b/luffa-node/Cargo.toml
@@ -39,6 +39,7 @@ tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 zeroize.workspace = true
 void = "1.0.2"
+petgraph = "0.6.3"
 
 [dependencies.libp2p]
 workspace = true
