--- a/luffa-node/Cargo.toml
+++ b/luffa-node/Cargo.toml
@@ -40,6 +40,7 @@ tracing-subscriber = { workspace = true, features = ["env-filter"] }
 zeroize.workspace = true
 void = "1.0.2"
 petgraph = "0.6.3"
+crc64fast.workspace = true
 
 [dependencies.libp2p]
 workspace = true
