--- a/luffa-node/Cargo.toml
+++ b/luffa-node/Cargo.toml
@@ -12,6 +12,8 @@ anyhow.workspace = true
 async-trait.workspace = true
 async-stream.workspace = true
 bytes.workspace = true
+bs58.workspace = true
+hex.workspace = true
 clap = { workspace = true, features = ["derive"] }
 cid.workspace = true
 config.workspace = true
@@ -41,6 +43,7 @@ zeroize.workspace = true
 void = "1.0.2"
 petgraph = "0.6.3"
 crc64fast.workspace = true
+tiny-bip39 = "1.0.0"
 
 [dependencies.libp2p]
 workspace = true
