--- a/luffa-relay/Cargo.toml
+++ b/luffa-relay/Cargo.toml
@@ -31,3 +31,4 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] 
 tracing.workspace = true
 libp2p = { workspace = true, features = ["gossipsub"] }
 petgraph = "0.6.3"
+chrono.workspace = true
