--- a/luffa-node/Cargo.toml
+++ b/luffa-node/Cargo.toml
@@ -44,6 +44,7 @@ void = "1.0.2"
 petgraph = "0.6.3"
 crc64fast.workspace = true
 tiny-bip39 = "1.0.0"
+chrono.workspace = true
 
 [dependencies.libp2p]
 workspace = true
