--- a/luffa-sdk/Cargo.toml
+++ b/luffa-sdk/Cargo.toml
@@ -42,6 +42,7 @@ thiserror = "1.0"
 futures-lite = "1.12.0"
 tantivy = "0.19.2"
 tiny-bip39 = "1.0.0"
+chrono.workspace = true
 
 
 [build-dependencies]
