--- a/luffa-sdk/Cargo.toml
+++ b/luffa-sdk/Cargo.toml
@@ -44,6 +44,11 @@ futures-lite = "1.12.0"
 tantivy = "0.19.2"
 tiny-bip39 = "1.0.0"
 chrono.workspace = true
+identicon-rs.workspace = true
+calamine.workspace = true
+image.workspace = true
+once_cell.workspace = true
+base64.workspace = true
 
 
 [build-dependencies]
