--- a/luffa-relay/luffa.boot.toml
+++ b/luffa-relay/luffa.boot.toml
@@ -1,4 +1,4 @@
-push_api=https://luffa.putdev.com/post/sendMessage
+push_api="https://luffa.putdev.com/post/sendMessage"
 [store]
 path = "~/.local/share/boot/store"
 [p2p]
