--- a/luffa-sdk/Cargo.toml
+++ b/luffa-sdk/Cargo.toml
@@ -49,6 +49,8 @@ calamine.workspace = true
 image.workspace = true
 once_cell.workspace = true
 base64.workspace = true
+rkyv.workspace = true
+bytecheck.workspace = true
 
 
 [build-dependencies]
