--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,6 +127,8 @@ chrono = "0.4.23"
 identicon-rs = "4.0.1"
 calamine = "0.19.1"
 image = "0.24.0"
+serde_json = "1.0.95"
+parking_lot = "0.12.1"
 
 
 
