--- a/luffa-sdk/Cargo.toml
+++ b/luffa-sdk/Cargo.toml
@@ -49,8 +49,9 @@ calamine.workspace = true
 image.workspace = true
 once_cell.workspace = true
 base64.workspace = true
-rkyv.workspace = true
 bytecheck.workspace = true
+serde_json.workspace = true
+parking_lot.workspace = true
 
 
 [build-dependencies]
