--- a/luffa-sdk/Cargo.toml
+++ b/luffa-sdk/Cargo.toml
@@ -51,7 +51,7 @@ once_cell.workspace = true
 base64.workspace = true
 rkyv.workspace = true
 bytecheck.workspace = true
-
+parking_lot.workspace = true
 
 [build-dependencies]
 uniffi = { version = "0.23.0", features = ["build"] }
