--- a/luffa-sdk/Cargo.toml
+++ b/luffa-sdk/Cargo.toml
@@ -52,7 +52,7 @@ base64.workspace = true
 bytecheck.workspace = true
 serde_json.workspace = true
 parking_lot.workspace = true
-
+simsearch = "0.2"
 
 [build-dependencies]
 uniffi = { version = "0.23.0", features = ["build"] }
