update:test_docker

--- a/luffa-sdk/Cargo.toml
+++ b/luffa-sdk/Cargo.toml
@@ -66,6 +66,10 @@ path = "./src/uniffi-bindgen.rs"
 name = "luffa-client"
 path = "./src/main.rs"
 
+[[bin]]
+name = "luffa-client-test"
+path = "./src/luffa-client-test.rs"
+
 [profile.release]
 opt-level = "z"
 debug = 0
