feat: 新增使用env_name 进行初始化的函数 init_with_env_name

--- a/luffa-sdk/Cargo.toml
+++ b/luffa-sdk/Cargo.toml
@@ -28,7 +28,7 @@ luffa-store = {workspace = true,features = [ "node"]}
 luffa-util.workspace = true
 
 multibase.workspace = true
-# reqwest = { workspace = true, features = ["rustls-tls"] }
+reqwest = { workspace = true, features = ["rustls-tls", "gzip", "brotli", "deflate", "blocking"] }
 rand.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_cbor.workspace = true
