--- a/luffa-relay/Cargo.toml
+++ b/luffa-relay/Cargo.toml
@@ -32,3 +32,7 @@ tracing.workspace = true
 libp2p = { workspace = true, features = ["gossipsub"] }
 petgraph = "0.6.3"
 chrono.workspace = true
+
+
+[features]
+bitswap = []
