--- a/luffa-sdk/luffa.config.toml
+++ b/luffa-sdk/luffa.config.toml
@@ -1,3 +1,2 @@
 [p2p]
-#libp2p = { listening_multiaddrs = ["/ip4/0.0.0.0/udp/8080/quic-v1"],bootstrap_peers=["/ip4/172.17.0.3/udp/8899/quic-v1/p2p/12D3KooWN4XwthUP5gVJ1UtY9ar2T3gQYSceHpz49UVWgqEiwc8o","/ip4/172.17.0.5/udp/8899/quic-v1/p2p/12D3KooWNUkmviDMXXbuibyrDvUmAtk2zxHkrRHi3n6Z3skVz9bE","/ip4/172.17.0.7/udp/8899/quic-v1/p2p/12D3KooWKoKKGuqeSUKFJqDEc4By4xk6EsYzkkjQ1yTRELBtwmSm"]}
-libp2p = { listening_multiaddrs = ["/ip4/0.0.0.0/udp/8080/quic-v1"],bootstrap_peers=["/ip4/172.17.0.2/udp/8899/quic-v1/p2p/12D3KooWGstCnqjoixoBgAR2kwDd2Kq7kxyuB6vNdAqs9chUKd9f"]}
+libp2p = { listening_multiaddrs = ["/ip4/0.0.0.0/udp/8080/quic-v1"],bootstrap_peers=["/ip4/154.91.85.67/udp/8899/quic-v1/p2p/12D3KooWDmaK9qaCZz7pF5x958bS2kD8qrnKPqws8CX6wtWovqtM","/ip4/206.238.42.164/udp/8899/quic-v1/p2p/12D3KooWPrdZAikYSN7sc1KFsgQCwNiEtLsJrAH4eMDx6EfJHVdN","/ip4/206.238.76.119/udp/8899/quic-v1/p2p/12D3KooWPKYyNDeJhtxtTcywhLTTwoGGeB2diWnzKVZjjY9BF9pX"],max_conns_in=3,max_conns_out=3,max_conns_per_peer=1}
